Using ESJ template engine to generate javascript files.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Patrick Opie",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.4.1" 
+    "angular": "^1.4.1"
+  },
+  "devDependencies": {
+    "ejs": "^2.3.4"
   }
 }
